design navigation figma

--- a/agency/blog-details.html
+++ b/agency/blog-details.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Page Title -->
-    <title>STEM Innovators</title>
+    <title>MegaOne - Agency</title>
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.ico" />
     <!-- Bundle -->
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../vendor/css/swiper.min.css" />
     <link rel="stylesheet" href="../vendor/css/cubeportfolio.min.css" />
     <!-- Style Sheet -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../agency/css/style.css" />
   </head>
 
   <body data-spy="scroll" data-target=".navbar" data-offset="90">
@@ -35,232 +35,39 @@
     </div>
     <!--/Preloader -->
 
-    <!--Header Start-->
-    <header class="cursor-light">
-      <!--Navigation-->
-      <nav
-        class="navbar navbar-top-default navbar-expand-lg navbar-gradient nav-icon alt-font"
-      >
-        <div class="container">
-          <a class="logo link scroll" href="javascript:void(0)" title="Logo">
-            <!--Logo Default-->
-            <img
-              alt="logo"
-              class="logo-dark default"
-              src="./img/LOGOSTEM.png"
-            />
-          </a>
-
-          <!--Nav Links-->
-          <div class="collapse navbar-collapse" id="agency">
-            <div class="navbar-nav ml-auto">
-              <a class="nav-link" href="../index.html">Home</a>
-              <a class="nav-link" href="./about.html">About Us</a>
-              <a class="nav-link active" href="#program">Program</a>
-              <!-- <a class="nav-link link scroll" href="#clients">Clients</a> -->
-              <a class="nav-link" href="./blog-list.html">Our Blog</a>
-              <a class="nav-link" href="./contact.html">Contact Us</a>
-              <span class="menu-line"
-                ><i aria-hidden="true" class="fa fa-angle-down"></i
-              ></span>
-            </div>
-          </div>
-
-          <!--Menu Button-->
-          <button
-            class="fullnav-toggler link ml-5"
-            id="full-menu-1"
-            type="button"
-          >
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
-          </button>
-        </div>
-      </nav>
-
-      <!--Full menu-->
-      <div class="nav-holder main style-2 alt-font">
-        <!--Menu Button-->
-        <button class="fullnav-close link" type="button">
-          <span class="line"></span>
-          <span class="line"></span>
-          <span class="line"></span>
-        </button>
-
-        <div class="container">
-          <div class="shape-left">
-            <nav class="navbar full-menu-navigation left">
-              <ul class="list-unstyled">
-                <li>
-                  <a class="link" href="../index.html">
-                    <span class="anchor-circle"></span>
-                    <span class="anchor-text">Home</span>
-                  </a>
-                </li>
-                <li>
-                  <a class="link" href="./about.html">
-                    <span class="anchor-circle"></span>
-                    <span class="anchor-text">About</span>
-                  </a>
-                </li>
-                <li>
-                  <a class="link" href="./stem innovators.html">
-                    <span class="anchor-circle"></span>
-                    <span class="anchor-text">Program</span>
-                  </a>
-                </li>
-
-                <li>
-                  <a class="link" href="./blog-list.html">
-                    <span class="anchor-circle"></span>
-                    <span class="anchor-text">Blog</span>
-                  </a>
-                </li>
-                <li>
-                  <a class="link" href="./contact.html">
-                    <span class="anchor-circle"></span>
-                    <span class="anchor-text">Contact</span>
-                  </a>
-                </li>
-              </ul>
-              <span class="full-menu-dot" style="transform: scale(0)"></span>
-            </nav>
-            <img alt="shape" src="agency/img/Ellipse 4.png" />
-          </div>
-        </div>
-      </div>
-
-      <!--Get Quote Model Popup-->
-      <div class="animated-modal hidden quote-content" id="animatedModal">
-        <!--Heading-->
-        <div class="heading-area pb-2 mx-570">
-          <span class="sub-title">We are revolusioner</span>
-          <h2 class="title mt-2">
-            Lets start your
-            <span class="alt-color js-rotating">journey, learning</span>
-          </h2>
-        </div>
-        <!--Contact Form-->
-        <form class="contact-form" id="modal-contact-form-data">
-          <div class="row">
-            <!--Result-->
-            <div class="col-12" id="quote_result"></div>
-
-            <!--Left Column-->
-            <div class="col-md-6">
-              <div class="form-group">
-                <input
-                  class="form-control"
-                  id="quote_name"
-                  name="quoteName"
-                  placeholder="Name"
-                  required=""
-                  type="text"
-                />
-              </div>
-              <div class="form-group">
-                <input
-                  class="form-control"
-                  id="quote_contact"
-                  name="userPhone"
-                  placeholder="Contact #"
-                  required=""
-                  type="text"
-                />
-              </div>
-              <div class="form-group">
-                <input
-                  class="form-control"
-                  id="quote_type"
-                  name="projectType"
-                  placeholder="Project type"
-                  required=""
-                  type="text"
-                />
-              </div>
-            </div>
-
-            <!--Right Column-->
-            <div class="col-md-6">
-              <div class="form-group">
-                <input
-                  class="form-control"
-                  id="quote_email"
-                  name="userEmail"
-                  placeholder="Email"
-                  required=""
-                  type="email"
-                />
-              </div>
-              <div class="form-group">
-                <input
-                  class="form-control"
-                  id="quote_address"
-                  name="userAddress"
-                  placeholder="City / Country"
-                  required=""
-                  type="text"
-                />
-              </div>
-              <div class="form-group">
-                <input
-                  class="form-control"
-                  id="quote_budget"
-                  name="quoteBudget"
-                  placeholder="Budget"
-                  required=""
-                  type="text"
-                />
-              </div>
-            </div>
-
-            <!--Full Column-->
-            <div class="col-md-12">
-              <div class="form-group">
-                <textarea
-                  class="form-control"
-                  id="quote_message"
-                  name="userMessage"
-                  placeholder="Please explain your project in detail."
-                ></textarea>
-              </div>
-            </div>
-
-            <!--Button-->
-            <div class="col-md-12">
-              <div class="form-check">
-                <label class="checkbox-lable"
-                  >Contact by phone ins preffered
-                  <input type="checkbox" />
-                  <span class="checkmark"></span>
-                </label>
-              </div>
-
-              <a
-                class="btn btn-large btn-rounded btn-blue btn-hvr-pink modal_contact_btn"
-                href="javascript:void(0);"
-                id="quote_submit_btn"
-                ><i
-                  class="fa fa-spinner fa-spin mr-2 d-none"
-                  aria-hidden="true"
-                ></i
-                ><b>Send Message</b>
-                <div class="btn-hvr-setting">
-                  <ul class="btn-hvr-setting-inner">
-                    <li class="btn-hvr-effect"></li>
-                    <li class="btn-hvr-effect"></li>
-                    <li class="btn-hvr-effect"></li>
-                    <li class="btn-hvr-effect"></li>
-                  </ul>
-                </div>
+    <!-- ***** Header Area Start ***** -->
+    <header class="header-area header-sticky">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <nav class="main-nav">
+              <!-- ***** Logo Start ***** -->
+              <a href="#" class="logo">
+                <img src="../agency/img/logo.png" alt="STEM INSTITUTION" />
               </a>
-            </div>
+              <!-- ***** Logo End ***** -->
+              <!-- ***** Menu Start ***** -->
+              <ul class="nav">
+                <li>
+                  <a href="../index.html" class="active">Home</a>
+                </li>
+                <li><a href="#about">About</a></li>
+                <li>
+                  <a href="#">Programmes</a>
+                </li>
+                <li><a href="blog-list.html">Blog Entries</a></li>
+                <li><a href="#contact-us">Contact Us</a></li>
+              </ul>
+              <a class="menu-trigger">
+                <span>Menu</span>
+              </a>
+              <!-- ***** Menu End ***** -->
+            </nav>
           </div>
-        </form>
+        </div>
       </div>
     </header>
-    <!--Header End-->
+    <!-- ***** Header Area End ***** -->
 
     <!--Banner Start-->
     <section class="page-title cursor-light">
@@ -524,8 +331,8 @@
           <!--Text-->
           <div class="col-md-6 text-md-right">
             <p class="company-about fadeIn">
-              © 2020 MegaOne. Made With Love By
-              <a href="javascript:void(0);">Themesindustry</a>
+              © 2023
+              <a href="javascript:void(0);">STEM INSTITUTION</a>
             </p>
           </div>
         </div>
